--- a/examples/console/index.html
+++ b/examples/console/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <title>Console Demo</title>
-    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML-full,Safe&amp;delayStartupUntil=configured"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-AMS_CHTML-full,Safe&amp;delayStartupUntil=configured"></script>
   </head>
   <body>
     {% set page_config_full = {'baseUrl': base_url, 'token': token} %}
-    
+
     <script id="jupyter-config-data" type="application/json">
       {{ page_config_full | tojson }}
     </script>
-  
+
     <script src="{{base_url | e}}example/bundle.js"></script>
 
     <script type="text/javascript">
