--- a/packages/services/examples/browser-require/index.html
+++ b/packages/services/examples/browser-require/index.html
@@ -38,6 +38,6 @@
         }
     });
     </script>
-    <script src="{{base_url | e}}static/example_app/index.js"></script>
+    <script src="{{base_url | e}}static/main/index.js"></script>
   </body>
 </html>
